campaign management mandatory fields and analytics metrics

--- a/src/app/features/crm/components/campaigns/campaign-analytics/campaign-analytics.component.html
+++ b/src/app/features/crm/components/campaigns/campaign-analytics/campaign-analytics.component.html
@@ -65,8 +65,12 @@
 <div class="row col-sm-12 col-lg-6 mb-2">
   <label class="text-black w-auto" style="margin-top: .4rem;">Metric</label>
   <select class="form-select w-50">
-    <option value="1">Engagements</option>
-    <option value="2">Inactive</option>
+    <option value="">Messages sent</option>
+    <option value="">Messages queue</option>
+    <option value="">Viewed messages</option>
+    <option value="">Total click-thru links</option>
+    <option value="">Engagement rate</option>
+    <option value="">Conversion rate</option>
   </select>
 </div>
 <div>
@@ -82,8 +86,12 @@
 <div class="row col-sm-12 col-lg-6 mb-2">
   <label class="text-black w-auto" style="margin-top: .4rem;">Metric</label>
   <select class="form-select w-50">
-    <option value="1">Engagements</option>
-    <option value="2">Inactive</option>
+    <option value="">Messages sent</option>
+    <option value="">Messages queue</option>
+    <option value="">Viewed messages</option>
+    <option value="">Total click-thru links</option>
+    <option value="">Engagement rate</option>
+    <option value="">Conversion rate</option>
   </select>
 </div>
 <p-table
@@ -148,8 +156,12 @@
 <div class="row col-sm-12 col-lg-6 mb-2">
   <label class="w-auto" style="margin-top: .4rem;">Metric</label>
   <select class="form-select w-50">
-    <option value="1">Engagements</option>
-    <option value="2">Inactive</option>
+    <option value="">Messages sent</option>
+    <option value="">Messages queue</option>
+    <option value="">Viewed messages</option>
+    <option value="">Total click-thru links</option>
+    <option value="">Engagement rate</option>
+    <option value="">Conversion rate</option>
   </select>
 </div>
 <p-table
