VQ-1751: updated member dashboard

--- a/src/app/features/base/components/header-sub-menu/admin-sub-menu/admin-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/admin-sub-menu/admin-sub-menu.component.html
@@ -27,6 +27,7 @@
               class="nav-link active"
               aria-current="page"
               href="javascript:void(0)"
+              routerLink="/home/lms/grp/dashboard/admin"
             >
               <i
                 class="fa-solid fa-house-chimney"
@@ -42,6 +43,7 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
               style="font-size: 12px"
+              routerLink="/home/lms/grp/dashboard/products"
             >
               <i
                 class="fa-solid fa-solid fa-briefcase"
