--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -1,2 +1,3 @@
-<app-default-sub-menu *ngIf="entityType==='DEFAULT'"></app-default-sub-menu>
-<app-admin-sub-menu *ngIf="entityType==='ADMIN'"></app-admin-sub-menu>
+<app-default-sub-menu *ngIf="entityType === 'USR'"></app-default-sub-menu>
+<app-admin-sub-menu *ngIf="entityType === 'ADMIN'"></app-admin-sub-menu>
+<app-member-sub-menu *ngIf="entityType === 'MEMBER'"></app-member-sub-menu>
