--- a/src/app/features/entities/components/entity/view-entity/entity-transactions/entity-transactions.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-transactions/entity-transactions.component.html
@@ -1,5 +1,5 @@
 <div class="quotations mb-4">
-  <h5>Quotations</h5>
+  <h5>{{ "entities.quotations" | translate }}</h5>
   <p-tabView>
     <p-tabPanel header="General">
       <div class="row">
@@ -42,16 +42,18 @@
           >
             <ng-template pTemplate="header">
               <tr>
-                <th>Quotation no.</th>
-                <th>Client name</th>
-                <th>Sum insured({{ currency }})</th>
-                <th>Premium({{ currency }})</th>
-                <th>Intermediary</th>
-                <th>Dated created</th>
-                <th>Cover from</th>
-                <th>Cover to</th>
-                <th>Status</th>
-                <th>Action</th>
+                <th>{{ "entities.quotation_no" | translate }}</th>
+                <th>{{ "entities.client_name" | translate }}</th>
+                <th>
+                  {{ "entities.sum_insured" | translate }}({{ currency }})
+                </th>
+                <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                <th>{{ "entities.intermediary" | translate }}</th>
+                <th>{{ "entities.date_created" | translate }}</th>
+                <th>{{ "entities.cover_from" | translate }}</th>
+                <th>{{ "entities.cover_to" | translate }}</th>
+                <th>{{ "entities.status" | translate }}</th>
+                <th>{{ "entities.action" | translate }}</th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-quot>
@@ -158,16 +160,20 @@
             >
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Policy no.</th>
-                  <th style="width: 30%">Client name</th>
-                  <th>Sum insured({{ currency }})</th>
-                  <th>Premium({{ currency }})</th>
-                  <th>Intermediary</th>
-                  <th>Dated created</th>
-                  <th>Cover from</th>
-                  <th>Cover to</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>{{ "entities.policy_no" | translate }}</th>
+                  <th style="width: 30%">
+                    {{ "entities.client_name" | translate }}
+                  </th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-policy>
@@ -203,16 +209,20 @@
             >
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Policy no.</th>
-                  <th style="width: 30%">Client name</th>
-                  <th>Sum insured({{ currency }})</th>
-                  <th>Premium({{ currency }})</th>
-                  <th>Intermediary</th>
-                  <th>Dated created</th>
-                  <th>Cover from</th>
-                  <th>Cover to</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>{{ "entities.policy_no" | translate }}</th>
+                  <th style="width: 30%">
+                    {{ "entities.client_name" | translate }}
+                  </th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-policy>
@@ -248,16 +258,20 @@
             >
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Policy no.</th>
-                  <th style="width: 30%">Client name</th>
-                  <th>Sum insured({{ currency }})</th>
-                  <th>Premium({{ currency }})</th>
-                  <th>Intermediary</th>
-                  <th>Dated created</th>
-                  <th>Cover from</th>
-                  <th>Cover to</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>{{ "entities.policy_no" | translate }}</th>
+                  <th style="width: 30%">
+                    {{ "entities.client_name" | translate }}
+                  </th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-policy>
@@ -365,16 +379,20 @@
             >
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Claim no.</th>
-                  <th style="width: 30%">Client name</th>
-                  <th>Sum insured({{ currency }})</th>
-                  <th>Premium({{ currency }})</th>
-                  <th>Intermediary</th>
-                  <th>Dated created</th>
-                  <th>Cover from</th>
-                  <th>Cover to</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>{{ "entities.claim_no" | translate }}</th>
+                  <th style="width: 30%">
+                    {{ "entities.client_name" | translate }}
+                  </th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-claim>
@@ -412,16 +430,20 @@
             >
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Claim no.</th>
-                  <th style="width: 30%">Client name</th>
-                  <th>Sum insured({{ currency }})</th>
-                  <th>Premium({{ currency }})</th>
-                  <th>Intermediary</th>
-                  <th>Dated created</th>
-                  <th>Cover from</th>
-                  <th>Cover to</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>{{ "entities.claim_no" | translate }}</th>
+                  <th style="width: 30%">
+                    {{ "entities.client_name" | translate }}
+                  </th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-claim>
@@ -459,16 +481,20 @@
             >
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Claim no.</th>
-                  <th style="width: 20%">Client name</th>
-                  <th>Sum insured({{ currency }})</th>
-                  <th>Premium({{ currency }})</th>
-                  <th>Intermediary</th>
-                  <th>Dated created</th>
-                  <th>Cover from</th>
-                  <th>Cover to</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>{{ "entities.claim_no" | translate }}</th>
+                  <th style="width: 30%">
+                    {{ "entities.client_name" | translate }}
+                  </th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-claim>
