VQ-2393:Ability to view Risk Claim Experience Report

--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
@@ -310,3 +310,14 @@
     text-align: left;
 
 }
+.printClaimLabel{
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+    color: #00529B;
+}
+.printClaimLabel:hover{
+    text-decoration: underline;
+}
