--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -3163,6 +3163,58 @@
                             </div>
                         </div>
                     </div>
+                    <!-- RISK CLAIMS REPORT DETAILS -->
+                    <div class="card mt-2 mb-2 riskDetailsCards">
+                        <div class="card-body">
+                            <div class="row ">
+                                <div>
+                                    <div>
+                                        <div class="row">
+                                            <div class="col-sm-3">
+                                                <p class="subheading"> Risk claims report</p>
+                                            </div>
+                                            <div class="col-sm-9 d-flex justify-content-end">
+                                                <div class="row  mb-2">
+
+                                                    <!-- <div class="col-sm-3"></div> -->
+
+                                                    <!-- <div class="col-3" *ngIf="isRelatedRiskDetailsOpen">
+                                                        
+                                                    </div>
+                                                    <div class="col-3" *ngIf="isRelatedRiskDetailsOpen">
+                                                        
+                                                    </div>
+                                                    <div class="col-3" *ngIf="isRelatedRiskDetailsOpen">
+                                                      
+                                                    </div> -->
+                                                    <div class="col-3">
+                                                        <button type="button" id="icon" class="btn btn-primary"
+                                                            data-bs-toggle="collapse"
+                                                            data-bs-target="#riskClaimsReportDetails" aria-expanded="false"
+                                                            aria-controls="riskClaimsReportDetails"
+                                                            [attr.aria-expanded]="!isRiskClaimsReportDetailsOpen"
+                                                            (click)="toggleRiskClaimReportDetails()">
+                                                            <i class="fa-solid fa-chevron-down"></i>
+                                                        </button>
+                                                    </div>
+
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="collapse" id="riskClaimsReportDetails">
+
+                                    
+                                     <p class="printClaimLabel" (click)="printClaimReport()"> Print Claims Experience</p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                     <!-- COMMISSION TRANSACTION DETAILS -->
                     <div class="card mt-2 mb-2 riskDetailsCards">
                         <div class="card-body">
