--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -585,7 +585,7 @@
                                     <ng-template pTemplate="body" let-riskDetails let-ri="rowIndex">
                                         <tr [pSelectableRow]="riskDetails"
                                             [class.p-highlight]="riskDetails === selectedRisk"
-                                            (click)="togglePremiumDetails();getRiskClauses();getRiskPeril()">
+                                            (click)="togglePremiumDetails();getRiskClauses();getRiskPeril();getSubclassPerils()">
                                             <td class="flexible-header">{{riskDetails.propertyId}}</td>
                                             <td class="flexible-header"></td>
                                             <td class="flexible-header">{{riskDetails.propertyDescription}}</td>
@@ -2116,7 +2116,7 @@
                                                     <!-- <div class="col-sm-3"></div> -->
                                                     <div class="col-3" *ngIf="riskPerils">
                                                         <button type="button" id="icon" class="btn btn-success"
-                                                            title="add">
+                                                            title="add" data-bs-toggle="modal" data-bs-target="#addRiskPerilModal">
                                                             <i class="fa-solid fa-plus"></i>
                                                         </button>
                                                     </div>
@@ -2202,6 +2202,52 @@
                                                 </tr>
                                             </ng-template>
                                         </p-table>
+
+                                        <!-- ADD RISK PERIL MODAL -->
+                                        <div class="modal fade" id="addRiskPerilModal" tabindex="-1"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered">
+                                            <div class="modal-content">
+
+                                                <div class="modal-body">
+                                                    <button type="button" #closebutton class="float-end btn-close"
+                                                        data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    <p class="modalTitle" >
+                                                        {{'gis.policy.select_risk_peril'
+                                                        | translate}}
+                                                    </p>
+                                                </div>
+                                                <p-table [value]="subclassPerilList" dataKey="code" editMode="row"
+                                                    styleClass="p-datatable-sm" responsiveLayout="scroll"
+                                                    class='ui-datatable' [autoLayout]="true">
+                                                    <ng-template pTemplate="header">
+                                                        <tr class="mb-4">
+                                                         
+                                                            <th>Short Description</th>
+                                                            <th>Description</th>
+                                                            <th>Peril Type</th>
+                                                        </tr>
+                                                    </ng-template>
+                                                    <ng-template pTemplate="body" let-data
+                                                         let-ri="rowIndex">
+                                                        <tr [pEditableRow]="subclassPerilList">
+                                                            <td>{{data.shortDescription}}</td>
+                                                            <td>{{data.fullDescription}}</td>
+                                                            <td>{{data.perilType}}</td> 
+                                                        </tr>
+                                                            
+                                                    </ng-template>
+                                                </p-table>
+
+                                                <div class="d-flex justify-content-end mt-4 mb-4">
+                                                    <button type="button" class="btn btn-primary"
+                                                        data-bs-dismiss="modal">{{'crm.save_details' |
+                                                        translate}}</button>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
                                         <!--Edit Schedule Modal -->
                                         <div class="modal fade" id="editSchedule" tabindex="-1" role="dialog"
                                             aria-labelledby="editScheduleLabel" aria-hidden="true">
