--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -2134,13 +2134,13 @@
                                                     </div>
                                                     <div class="col-3" *ngIf="riskPerils">
                                                         <button type="button" id="icon" class="btn btn-primary"
-                                                            data-bs-toggle="modal" id="openRiskModalButtonDelete"
-                                                            [hidden]="true" data-bs-target="#deleteRisk" title="Delete">
+                                                            data-bs-toggle="modal" id="openRiskPerilModalButtonDelete"
+                                                            [hidden]="true" data-bs-target="#deleteRiskPeril" title="Delete">
                                                         </button>
                                                         <button type="button" id="icon" class="btn btn-primary"
                                                             title="Delete">
                                                             <i class="fa-solid fa-trash-can"
-                                                                (click)="openRiskDeleteModal()"></i>
+                                                                (click)="openRiskPerilDeleteModal()"></i>
                                                         </button>
 
                                                     </div>
@@ -2163,7 +2163,7 @@
                                     <div class="collapse" id="riskPerils">
 
                                         <p-table #dt2 [value]="policyRiskPeril" dataKey="code" selectionMode="single"
-                                            [(selection)]="selectedSchedule" [tableStyle]="{'min-width': '50rem'}"
+                                            [(selection)]="selectedRiskPeril" [tableStyle]="{'min-width': '50rem'}"
                                             responsiveLayout="scroll" [autoLayout]="true">
 
 
@@ -2187,8 +2187,7 @@
                                             </ng-template>
 
                                             <ng-template pTemplate="body" let-data let-ri="rowIndex">
-                                                <tr [pSelectableRow]="riskDetails"
-                                                    [class.p-highlight]="riskDetails === selectedRisk">
+                                                <tr [pSelectableRow]="data" >
                                                     <td>{{data.perilDescription}}</td>
                                                     <td>{{data.description}}</td>
                                                     <td>{{data.perilType}}</td>
@@ -2217,7 +2216,7 @@
                                                         | translate}}
                                                     </p>
                                                 </div>
-                                                <p-table [value]="subclassPerilList" dataKey="code" editMode="row"
+                                                <p-table [value]="subclassPerilList" dataKey="code" selectionMode="single" [(selection)]="selectedPeril"
                                                     styleClass="p-datatable-sm" responsiveLayout="scroll"
                                                     class='ui-datatable' [autoLayout]="true">
                                                     <ng-template pTemplate="header">
@@ -2230,7 +2229,7 @@
                                                     </ng-template>
                                                     <ng-template pTemplate="body" let-data
                                                          let-ri="rowIndex">
-                                                        <tr [pEditableRow]="subclassPerilList">
+                                                        <tr [pSelectableRow]="data" (click)="getSingleRiskPeril()">
                                                             <td>{{data.shortDescription}}</td>
                                                             <td>{{data.fullDescription}}</td>
                                                             <td>{{data.perilType}}</td> 
@@ -2269,11 +2268,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <!-- Delete Risk  Modal -->
-                                        <div class="modal fade" id="deleteRisk" tabindex="-1" role="dialog"
-                                            aria-labelledby="deleteRisk" aria-hidden="true">
+                                        <!-- Delete Risk Peril  Modal -->
+                                        <div class="modal fade" id="deleteRiskPeril" tabindex="-1" role="dialog"
+                                            aria-labelledby="deleteRiskPeril" aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-centered" role="document">
-                                                <div class="modal-content" id="deleteRisk">
+                                                <div class="modal-content" id="deleteRiskPeril">
                                                     <div class="modal-body ">
                                                         <p class="deleteMessage mt-4 mb-4">
                                                             {{'gis.policy.are_you_sure_you_want_to_delete' | translate}}
@@ -2281,7 +2280,7 @@
                                                         <div class="d-flex justify-content-center mb-3">
                                                             <button type="button" class="btn btn-primary px-5"
                                                                 id="delete"
-                                                                data-bs-dismiss="modal">{{'gis.policy.yes_delete' |
+                                                                data-bs-dismiss="modal" (click)="deleteRiskPeril()">{{'gis.policy.yes_delete' |
                                                                 translate}} </button>
                                                         </div>
                                                         <div class="d-flex justify-content-center mb-2">
