VQ-2645: replaced prototype data in policy table

--- a/src/app/features/base/components/dashboard/dashboard.component.css
+++ b/src/app/features/base/components/dashboard/dashboard.component.css
@@ -1,13 +1,16 @@
 .section-title {
   font-size: 15px;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 
-
+.transactions_container {
+  margin-bottom: 2rem;
+  background: #fff;
+}
 
 .transactions {
   font-size: 13px;
-  text-transform:uppercase;
+  text-transform: uppercase;
   padding: 0.5rem 0;
 }
 
