--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -1,187 +1,244 @@
 <div class="base-content-section home">
-  <h5 class="section-title">{{'base.home' | translate}}</h5>
+  <h5 class="section-title">{{ "base.home" | translate }}</h5>
   <div class="row">
-      <div class="col-sm-4 col-12">
-        <app-tickets-summary></app-tickets-summary>
-      </div>
+    <div class="col-sm-4 col-12">
+      <app-tickets-summary></app-tickets-summary>
+    </div>
 
-      <!--calendar-->
-      <div class="col-sm-8 col-12">
-        <app-calendar></app-calendar>
-      </div>
+    <!--calendar-->
+    <div class="col-sm-8 col-12">
+      <app-calendar></app-calendar>
+    </div>
   </div>
 </div>
 
 <div class="base-content-section dashboard">
   <h5 class="section-title" routerLink="/home/reportsv2/create-dashboard">
-    {{'base.my_dashboard' | translate}}
+    {{ "base.my_dashboard" | translate }}
   </h5>
   <div class="row">
-      <div class="col-sm-6 col-12">
-        <div class="card">
-          <div class="card-body">
-            <app-dynamic-chart
-              [basicData]="basicData"
-              [chartType]="'bar'"
-              [chartTitle]="'Total Individual Premium'"
-            ></app-dynamic-chart>
-          </div>
+    <div class="col-sm-6 col-12">
+      <div class="card">
+        <div class="card-body">
+          <app-dynamic-chart
+            [basicData]="basicData"
+            [chartType]="'bar'"
+            [chartTitle]="'Total Individual Premium'"
+          ></app-dynamic-chart>
         </div>
       </div>
+    </div>
 
-      <div class="col-sm-6 col-12">
-        <div class="card">
-          <div class="card-body">
-            <app-dynamic-chart
-              [chartType]="'line'"
-              [basicData]="basicData"
-              [chartTitle]="'Total Gross Premium'"
-            ></app-dynamic-chart>
-          </div>
+    <div class="col-sm-6 col-12">
+      <div class="card">
+        <div class="card-body">
+          <app-dynamic-chart
+            [chartType]="'line'"
+            [basicData]="basicData"
+            [chartTitle]="'Total Gross Premium'"
+          ></app-dynamic-chart>
         </div>
       </div>
+    </div>
   </div>
 </div>
 
 <div class="base-content-section lms">
   <div class="row">
-    <!-- BEGINS QUOTATION LIST (LMS/GIS) -->
-    <div class="col-sm-6">
-      <p class="transactions">{{'base.my_policies' | translate}}</p>
-
-      <ul class="nav nav-tabs" id="myTabs" role="tablist">
-        <li class="nav-item" role="presentation">
-          <a class="nav-link active" id="gis2-tab" data-bs-toggle="tab" href="#gis2" role="tab" aria-controls="gis2" aria-selected="true">GIS</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link " id="lms-tab" data-bs-toggle="tab" href="#lms" role="tab" aria-controls="lms" aria-selected="false">LMS</a>
-        </li>
-
-      </ul>
-
-
-
-      <div class="tab-content" id="myTabsContent">
-        <div class="tab-pane fade show active" id="gis2" role="tabpanel" aria-labelledby="gis2-tab">
-          <!-- Content for GIS tab goes here -->
-          <div class="card">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-12">
-                  <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tab-pane fade " id="lms" role="tabpanel" aria-labelledby="lms-tab">
-          <!-- Content for LMS tab goes here -->
-          <div class="card">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-12">
-
-                  <!-- BEGINS INDIVIDUAL LIST (LMS/GIS) -->
-                  <div>
-
-                    <ul class="nav nav-tabs" id="myTabs" role="tablist">
-                      <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="ind-tab" data-bs-toggle="tab" href="#ind" role="tab" aria-controls="ind" aria-selected="true">INDIVIDUAL</a>
-                      </li>
-                      <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="grp-tab" data-bs-toggle="tab" href="#grp" role="tab" aria-controls="grp" aria-selected="false">GROUP</a>
-                      </li>
-                    </ul>
-
-                    <div class="tab-content" id="myTabsContentInner">
-                      <div class="tab-pane fade show active" id="ind" role="tabpanel" aria-labelledby="ind-tab">
-                        <div class="card">
-                          <div class="card-body">
-                            <div class="row">
-                              <div class="col-sm-12">
-                                <!-- IND -->
-                                  <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                    </div>
-
-                      <div class="tab-content" id="myTabsContentInner">
-                        <div class="tab-pane fade" id="grp" role="tabpanel" aria-labelledby="grp-tab">
-                          <div class="card">
-                            <div class="card-body">
-                              <div class="row">
-                                <div class="col-sm-12">
-                                  <!-- GRRRR -->
-                                    <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
-
-
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                      </div>
-                  </div>
-                  <!-- BEGINS GROUP LIST (LMS/GIS) -->
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <!-- END QUOTATION LIST (LMS/GIS) -->
-
     <!-- BEGINS POLICY LIST (LMS/GIS) -->
-    <div class="col-sm-6" id="lms-gis-policy-list">
-      <p class="transactions">{{'base.my_quotations' | translate}}</p>
-      <ul class="nav nav-tabs" id="myTabs2" role="tablist2">
-        <li class="nav-item" role="presentation">
-          <a class="nav-link active" id="lms2-tab" data-bs-toggle="tab" href="#lms2" role="tab" aria-controls="lms2" aria-selected="true">LMS</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="gis-tab" data-bs-toggle="tab" href="#gis" role="tab" aria-controls="gis" aria-selected="false">GIS</a>
-        </li>
-      </ul>
-
-      <div class="tab-content" id="myTabsContent2">
-        <div class="tab-pane fade show active" id="lms2" role="tabpanel" aria-labelledby="lms2-tab">
-          <!-- Content for LMS tab goes here -->
-          <div class="card">
-            <div class="card-body">
-
-              <div class="tab-content" id="lmsTabsContent">
-                <div class="tab-pane fade show active" id="quotations" role="tabpanel" aria-labelledby="quotations-tab">
-                  <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
-                </div>
-                <!-- Add more tab panes within the LMS tab content as needed -->
-              </div>
+    <div class="col-sm-12 transactions_container">
+      <p class="transactions">{{ "base.my_policies" | translate }}</p>
+      <p-tabView styleClass="tabview-custom">
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.general" | translate }}</span>
+          </ng-template>
+          <div class="row">
+            <div class="offset-8 col-sm-4 text-end mb-2">
+              <a type="button" class="btn btn-primary btn-sm" routerLink="/home/gis/policy/underwriting">
+                {{ "entities.create_new_policy" | translate }}
+              </a>
             </div>
           </div>
-        </div>
-        <div class="tab-pane fade" id="gis" role="tabpanel" aria-labelledby="gis-tab">
-          <!-- Content for GIS tab goes here -->
-          <div class="card">
-            <div class="card-body">
-
-              <div class="tab-content" id="gisTabsContent">
-                <div class="tab-pane fade show active" id="quotations-gis" role="tabpanel" aria-labelledby="quotations-gis-tab">
-                  <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
-                </div>
-                <!-- Add more tab panes within the GIS tab content as needed -->
+          <ng-container *ngIf="isPolicyDataReady; else policyLoading">
+            <ng-container>
+              <p-table
+                [value]="gis_policies"
+                [paginator]="true"
+                [rows]="5"
+                [showCurrentPageReport]="true"
+                [tableStyle]="{ 'min-width': '50rem' }"
+                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+                [rowsPerPageOptions]="[5, 10, 20, 50]"
+              >
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>{{ "entities.policy_no" | translate }}</th>
+                    <th style="width: 30%">
+                      {{ "entities.client_name" | translate }}
+                    </th>
+                    <th>
+                      {{ "entities.sum_insured" | translate }}({{ currency }})
+                    </th>
+                    <th>
+                      {{ "entities.premium" | translate }}({{ currency }})
+                    </th>
+                    <th>{{ "entities.intermediary" | translate }}</th>
+                    <th>{{ "entities.date_created" | translate }}</th>
+                    <th>{{ "entities.cover_from" | translate }}</th>
+                    <th>{{ "entities.cover_to" | translate }}</th>
+                    <th>{{ "entities.status" | translate }}</th>
+                    <th>{{ "entities.action" | translate }}</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-policy>
+                  <tr>
+                    <td>{{ policy?.policyNo }}</td>
+                    <td>{{ policy?.clientName }}</td>
+                    <td>{{ policy?.totalSumInsured | currency : " " }}</td>
+                    <td>{{ policy?.premium | currency : " " }}</td>
+                    <td>{{ policy?.agency }}</td>
+                    <td>{{ policy?.preparedDate }}</td>
+                    <td>{{ policy?.wefDt }}</td>
+                    <td>{{ policy?.wetDt }}</td>
+                    <td>{{ policy?.authorizedStatus }}</td>
+                    <td>
+                      <button type="button" class="btn btn-link text-primary">
+                        <i class="pi pi-eye" style="padding: 0 2px 0 0"> </i>
+                      </button>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </ng-container>
+          </ng-container>
+          <ng-template #policyLoading>
+            <div class="text-center">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
+          </ng-template>
+        </p-tabPanel>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_ind" | translate }}</span>
+          </ng-template>
+          <p>life</p>
+        </p-tabPanel>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_group" | translate }}</span>
+          </ng-template>
+          <p>At vero eos et accusamus et iusto odio dignissimos...</p>
+        </p-tabPanel>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.pension" | translate }}</span>
+          </ng-template>
+          <p>No</p>
+        </p-tabPanel>
+      </p-tabView>
     </div>
     <!-- END POLICY LIST (LMS/GIS) -->
+
+    <!-- BEGINS QUOTATOIN LIST (LMS/GIS) -->
+    <div class="col-sm-12 transactions_container" id="lms-gis-policy-list">
+      <p class="transactions">{{ "base.my_quotations" | translate }}</p>
+      <p-tabView>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.general" | translate }}</span>
+          </ng-template>
+          <div class="row">
+            <div class="offset-8 col-sm-4 text-end mb-2">
+              <a type="button" class="btn btn-primary btn-sm" routerLink="/home/gis/quotation/quick-quote">
+                {{ "entities.create_quick_quote" | translate }}
+              </a>
+              <a type="button" class="btn btn-primary btn-sm" routerLink="/home/gis/quotation/quotations-client-details">
+                {{ "entities.create_normal_quote" | translate }}
+              </a>
+              <!-- <p class="policy-sort">
+                Sort by: <small class="fw-bold">Newest</small>
+              </p> -->
+            </div>
+          </div>
+          <ng-container *ngIf="isQuotationDataReady; else quotationLoading">
+            <p-table
+              [value]="gis_quotations"
+              [paginator]="true"
+              [rows]="5"
+              [showCurrentPageReport]="true"
+              [tableStyle]="{ 'min-width': '50rem' }"
+              currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+              [rowsPerPageOptions]="[5, 10, 20, 50]"
+            >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th>{{ "entities.quotation_no" | translate }}</th>
+                  <th>{{ "entities.client_name" | translate }}</th>
+                  <th>
+                    {{ "entities.sum_insured" | translate }}({{ currency }})
+                  </th>
+                  <th>{{ "entities.premium" | translate }}({{ currency }})</th>
+                  <th>{{ "entities.intermediary" | translate }}</th>
+                  <th>{{ "entities.date_created" | translate }}</th>
+                  <th>{{ "entities.cover_from" | translate }}</th>
+                  <th>{{ "entities.cover_to" | translate }}</th>
+                  <th>{{ "entities.status" | translate }}</th>
+                  <th>{{ "entities.action" | translate }}</th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-quot>
+                <tr>
+                  <td>{{ quot?.no }}</td>
+                  <td style="width: 30%">
+                    {{ quot?.clientCode }}
+                  </td>
+                  <td>{{ quot?.sumInsured | currency : " " }}</td>
+                  <td>{{ quot?.premium | currency : " " }}</td>
+                  <td>{{ quot?.agentCode }}</td>
+                  <td>{{ quot?.dateCreated }}</td>
+                  <td>{{ quot?.coverFrom }}</td>
+                  <td>{{ quot?.coverTo }}</td>
+                  <td>{{ quot?.status }}</td>
+                  <td>
+                    <button type="button" class="btn btn-link text-primary">
+                      <i class="pi pi-eye" style="padding: 0 2px 0 0"> </i>
+                    </button>
+                  </td>
+                </tr>
+              </ng-template>
+            </p-table>
+          </ng-container>
+          <ng-template #quotationLoading>
+            <div class="text-center">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+          </ng-template>
+        </p-tabPanel>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_ind" | translate }}</span>
+          </ng-template>
+          <p>life</p>
+        </p-tabPanel>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_group" | translate }}</span>
+          </ng-template>
+          <p>At vero eos et accusamus et iusto odio dignissimos...</p>
+        </p-tabPanel>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.pension" | translate }}</span>
+          </ng-template>
+          <p>No</p>
+        </p-tabPanel>
+      </p-tabView>
+    </div>
+    <!-- END QUOTATION LIST (LMS/GIS) -->
   </div>
 </div>
-
-
