--- a/src/app/features/entities/components/entity/view-entity/entity-transactions/entity-transactions.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-transactions/entity-transactions.component.html
@@ -1,7 +1,10 @@
 <div class="quotations mb-4">
   <h5>{{ "entities.quotations" | translate }}</h5>
   <p-tabView>
-    <p-tabPanel header="General">
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <span class="tabTitle">{{ "base.general" | translate }}</span>
+      </ng-template>
       <div class="row">
         <div class="col-sm-4">
           <div class="mb-3">
@@ -21,12 +24,12 @@
           </select>
         </div>
         <div class="offset-2 col-sm-4 text-end">
-          <button type="button" class="btn btn-primary btn-sm">
-            Create quick quote
-          </button>
-          <button type="button" class="btn btn-primary btn-sm">
-            Create normal quote
-          </button>
+          <a type="button" class="btn btn-primary btn-sm" routerLink="/home/gis/quotation/quick-quote">
+            {{ "entities.create_quick_quote" | translate }}
+          </a>
+          <a type="button" class="btn btn-primary btn-sm" routerLink="/home/gis/quotation/quotations-client-details">
+            {{ "entities.create_normal_quote" | translate }}
+          </a>
         </div>
       </div>
       <div class="row">
@@ -87,7 +90,10 @@
         </ng-template>
       </div>
     </p-tabPanel>
-    <p-tabPanel header="Life Ind">
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <span class="tabTitle">{{ "base.life_ind" | translate }}</span>
+      </ng-template>
       <p>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem
         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
@@ -98,35 +104,28 @@
         numquam eius modi.
       </p>
     </p-tabPanel>
-    <p-tabPanel header="Life Group">
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
-      </p>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <span class="tabTitle">{{ "base.life_group" | translate }}</span>
+      </ng-template>
+      <p>At vero eos</p>
     </p-tabPanel>
-    <p-tabPanel header="Pension">
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
-      </p>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <span class="tabTitle">{{ "base.pension" | translate }}</span>
+      </ng-template>
+      <p>At vero eos</p>
     </p-tabPanel>
   </p-tabView>
 </div>
 
 <div class="policies mb-4">
-  <h5>Policies</h5>
+  <h5>{{ "entities.policies" | translate }}</h5>
   <p-tabView>
-    <p-tabPanel header="General">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.general" | translate }}</span>
+          </ng-template>
       <div class="row">
         <div class="col-sm-4">
           <div class="mb-3">
@@ -138,9 +137,9 @@
           </div>
         </div>
         <div class="offset-2 col-sm-6 text-end">
-          <button type="button" class="btn btn-primary btn-sm">
-            Create new policy
-          </button>
+          <a type="button" class="btn btn-primary btn-sm" routerLink="/home/gis/policy/underwriting">
+            {{ "entities.create_new_policy" | translate }}
+          </a>
           <p class="policy-sort">
             Sort by: <small class="fw-bold">Newest</small>
           </p>
@@ -304,7 +303,10 @@
         </ng-template>
       </div>
     </p-tabPanel>
-    <p-tabPanel header="Life Ind">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_ind" | translate }}</span>
+          </ng-template>
       <p>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem
         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
@@ -315,35 +317,32 @@
         numquam eius modi.
       </p>
     </p-tabPanel>
-    <p-tabPanel header="Life Group">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_group" | translate }}</span>
+          </ng-template>
       <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
+        At vero eos
       </p>
     </p-tabPanel>
-    <p-tabPanel header="Pension">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.pension" | translate }}</span>
+          </ng-template>
       <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
+        At vero
       </p>
     </p-tabPanel>
   </p-tabView>
 </div>
 
 <div class="claims mb-4">
-  <h5>Claims</h5>
+  <h5>{{ "entities.claims" | translate }}</h5>
   <p-tabView>
-    <p-tabPanel header="General">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.general" | translate }}</span>
+          </ng-template>
       <div class="row">
         <div class="col-sm-4">
           <div class="mb-3">
@@ -357,7 +356,7 @@
         </div>
         <div class="offset-2 col-sm-6 text-end">
           <button type="button" class="btn btn-primary btn-sm">
-            Report a claim
+            {{ "entities.report_a_claim" | translate }}
           </button>
           <p class="policy-sort">
             Sort by: <small class="fw-bold">Newest</small>
@@ -527,7 +526,10 @@
         </div>
       </ng-template>
     </p-tabPanel>
-    <p-tabPanel header="Life Ind">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_ind" | translate }}</span>
+          </ng-template>
       <p>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem
         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
@@ -538,7 +540,10 @@
         numquam eius modi.
       </p>
     </p-tabPanel>
-    <p-tabPanel header="Life Group">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.life_group" | translate }}</span>
+          </ng-template>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui
         blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
@@ -549,7 +554,10 @@
         cumque nihil impedit quo minus.
       </p>
     </p-tabPanel>
-    <p-tabPanel header="Pension">
+    <p-tabPanel>
+          <ng-template pTemplate="header">
+            <span class="tabTitle">{{ "base.pension" | translate }}</span>
+          </ng-template>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui
         blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
